8301801: Implement arena-centric API
Reviewed-by: jvernee