@@ -28,16 +28,11 @@
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestByteBuffer
  */
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySegment;
+import java.lang.foreign.*;
 import java.lang.foreign.MemoryLayout.PathElement;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SequenceLayout;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
@@ -185,8 +180,8 @@ public class TestByteBuffer {
 
     @Test
     public void testOffheap() {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(tuples, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(tuples);;
             initTuples(segment, tuples.elementCount());
 
             ByteBuffer bb = segment.asByteBuffer();
@@ -230,15 +225,15 @@ public class TestByteBuffer {
 
     @Test
     public void testDefaultAccessModesMappedSegment() throws Throwable {
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena);
             assertFalse(segment.isReadOnly());
         }
 
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 8L, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 8L, arena);
             assertTrue(segment.isReadOnly());
         }
     }
@@ -249,18 +244,18 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             //write to channel
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, tuples.byteSize(), arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, tuples.byteSize(), arena);
             initTuples(segment, tuples.elementCount());
             segment.force();
         }
 
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
             //read from channel
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena);
             checkTuples(segment, segment.asByteBuffer(), tuples.elementCount());
         }
     }
@@ -271,9 +266,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        Arena arena = Arena.openConfined();
+        Arena arena = Arena.ofConfined();
         try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena);
             assertTrue(segment.isMapped());
             arena.close();
             mappedBufferOp.apply(segment);
@@ -290,10 +285,10 @@ public class TestByteBuffer {
 
         // write one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (Arena arena = Arena.openConfined();
+            try (Arena arena = Arena.ofConfined();
                  FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
                 //write to channel
-                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, i, tuples.byteSize(), arena.scope());
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, i, tuples.byteSize(), arena);
                 initTuples(segment, 1);
                 segment.force();
             }
@@ -301,10 +296,10 @@ public class TestByteBuffer {
 
         // check one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (Arena arena = Arena.openConfined();
+            try (Arena arena = Arena.ofConfined();
                  FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
                 //read from channel
-                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena.scope());
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena);
                 checkTuples(segment, segment.asByteBuffer(), 1);
             }
         }
@@ -322,9 +317,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, LARGE_SIZE, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, LARGE_SIZE, arena);
             segment.isLoaded();
             segment.load();
             segment.isLoaded();
@@ -360,8 +355,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferOps")
     public void testScopedBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
         Buffer bb;
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes);;
             bb = bufferFactory.apply(segment.asByteBuffer());
         }
         //outside of session!!
@@ -386,8 +381,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferHandleOps")
     public void testScopedBufferAndVarHandle(VarHandle bufferHandle) {
         ByteBuffer bb;
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes);;
             bb = segment.asByteBuffer();
             for (Map.Entry<MethodHandle, Object[]> e : varHandleMembers(bb, bufferHandle).entrySet()) {
                 MethodHandle handle = e.getKey().bindTo(bufferHandle)
@@ -420,8 +415,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider = "bufferOps")
     public void testDirectBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes);;
             Buffer bb = bufferFactory.apply(segment.asByteBuffer());
             assertTrue(bb.isDirect());
             DirectBuffer directBuffer = ((DirectBuffer)bb);
@@ -433,8 +428,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeOffheap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(seq);;
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -471,8 +466,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeRoundtripNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(seq);;
             initializer.accept(segment);
             MemorySegment second = MemorySegment.ofBuffer(segment.asByteBuffer());
             checker.accept(second);
@@ -482,8 +477,8 @@ public class TestByteBuffer {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testBufferOnClosedSession() {
         MemorySegment leaked;
-        try (Arena arena = Arena.openConfined()) {
-            leaked = MemorySegment.allocateNative(bytes, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            leaked = arena.allocate(bytes);;
         }
         ByteBuffer byteBuffer = leaked.asByteBuffer(); // ok
         byteBuffer.get(); // should throw
@@ -491,7 +486,7 @@ public class TestByteBuffer {
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testTooBigForByteBuffer() {
-        MemorySegment segment = MemorySegment.ofAddress(0, Integer.MAX_VALUE + 10L, SegmentScope.auto());
+        MemorySegment segment = MemorySegment.ofAddress(0, Integer.MAX_VALUE + 10L, Arena.ofAuto());
         segment.asByteBuffer();
     }
 
@@ -501,7 +496,7 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, -1L, SegmentScope.auto());
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, -1L, Arena.ofAuto());
         }
     }
 
@@ -511,7 +506,7 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            fileChannel.map(FileChannel.MapMode.READ_WRITE, -1L, 1L, SegmentScope.auto());
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, -1L, 1L, Arena.ofAuto());
         }
     }
 
@@ -523,9 +518,9 @@ public class TestByteBuffer {
 
         int SIZE = Byte.MAX_VALUE;
 
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, SIZE, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, SIZE, arena);
             for (byte offset = 0; offset < SIZE; offset++) {
                 segment.set(JAVA_BYTE, offset, offset);
             }
@@ -533,9 +528,9 @@ public class TestByteBuffer {
         }
 
         for (int offset = 0 ; offset < SIZE ; offset++) {
-            try (Arena arena = Arena.openConfined();
+            try (Arena arena = Arena.ofConfined();
                  FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
-                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, SIZE - offset, arena.scope());
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, SIZE - offset, arena);
                 assertEquals(segment.get(JAVA_BYTE, 0), offset);
             }
         }
@@ -547,9 +542,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         //RW
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, arena);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertFalse(segment.isReadOnly());
@@ -559,9 +554,9 @@ public class TestByteBuffer {
             segment.unload();
         }
         //RO
-        try (Arena arena = Arena.openConfined();
+        try (Arena arena = Arena.ofConfined();
              FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
-            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 0L, arena.scope());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 0L, arena);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertTrue(segment.isReadOnly());
@@ -576,7 +571,7 @@ public class TestByteBuffer {
     public void testMapCustomPath() throws IOException {
         Path path = Path.of(URI.create("jrt:/"));
         try (FileChannel fileChannel = FileChannel.open(path, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, SegmentScope.auto());
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, Arena.ofAuto());
         }
     }
 
@@ -584,8 +579,8 @@ public class TestByteBuffer {
     public void testCopyHeapToNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(bytes, 1, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment nativeArray = arena.allocate(bytes, 1);;
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(heapArray);
             nativeArray.copyFrom(heapArray);
@@ -597,8 +592,8 @@ public class TestByteBuffer {
     public void testCopyNativeToHeap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(seq, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment nativeArray = arena.allocate(seq);;
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(nativeArray);
             heapArray.copyFrom(nativeArray);
@@ -669,18 +664,34 @@ public class TestByteBuffer {
 
     @Test
     public void testRoundTripAccess() {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment ms = MemorySegment.allocateNative(4, 1, arena.scope());;
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment ms = arena.allocate(4, 1);;
             MemorySegment msNoAccess = ms.asReadOnly();
             MemorySegment msRoundTrip = MemorySegment.ofBuffer(msNoAccess.asByteBuffer());
+            assertEquals(msRoundTrip.scope(), ms.scope());
             assertEquals(msNoAccess.isReadOnly(), msRoundTrip.isReadOnly());
         }
     }
 
+    @Test(dataProvider = "bufferFactories")
+    public void testDerivedBufferScopes(Supplier<Buffer> bufferFactory) {
+        MemorySegment segment = MemorySegment.ofBuffer(bufferFactory.get());
+        assertEquals(segment.scope(), segment.scope());
+        // one level
+        assertEquals(segment.asSlice(0).scope(), segment.scope());
+        assertEquals(segment.asReadOnly().scope(), segment.scope());
+        // two levels
+        assertEquals(segment.asSlice(0).asReadOnly().scope(), segment.scope());
+        assertEquals(segment.asReadOnly().asSlice(0).scope(), segment.scope());
+        // check fresh every time
+        MemorySegment another = MemorySegment.ofBuffer(bufferFactory.get());
+        assertNotEquals(segment.scope(), another.scope());
+    }
+
     @Test(expectedExceptions = IllegalStateException.class)
     public void testDeadAccessOnClosedBufferSegment() {
-        Arena arena = Arena.openConfined();
-        MemorySegment s1 = MemorySegment.allocateNative(JAVA_INT, arena.scope());
+        Arena arena = Arena.ofConfined();
+        MemorySegment s1 = arena.allocate(JAVA_INT);
         MemorySegment s2 = MemorySegment.ofBuffer(s1.asByteBuffer());
 
         // memory freed
@@ -695,7 +706,7 @@ public class TestByteBuffer {
         tmp.deleteOnExit();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE) ;
             Arena arena = arenaSupplier.get()) {
-            MemorySegment segment = MemorySegment.allocateNative(10, 1, arena.scope());;
+            MemorySegment segment = arena.allocate(10, 1);;
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
@@ -716,7 +727,7 @@ public class TestByteBuffer {
         tmp.deleteOnExit();
         Arena arena = arenaSupplier.get();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10, arena.scope());
+            MemorySegment segment = arena.allocate(10, 1);
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
@@ -733,8 +744,8 @@ public class TestByteBuffer {
 
     @Test
     public void buffersAndArraysFromSlices() {
-        try (Arena arena = Arena.openShared()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, arena.scope());;
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(16, 1);;
             int newSize = 8;
             var slice = segment.asSlice(4, newSize);
 
@@ -751,8 +762,8 @@ public class TestByteBuffer {
 
     @Test
     public void viewsFromSharedSegment() {
-        try (Arena arena = Arena.openShared()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, arena.scope());;
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(16, 1);;
             var byteBuffer = segment.asByteBuffer();
             byteBuffer.asReadOnlyBuffer();
             byteBuffer.slice(0, 8);
@@ -762,8 +773,8 @@ public class TestByteBuffer {
     @DataProvider(name = "segments")
     public static Object[][] segments() throws Throwable {
         return new Object[][] {
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, SegmentScope.auto()) },
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, Arena.openConfined().scope()) },
+                { (Supplier<MemorySegment>) () -> Arena.ofAuto().allocate(16, 1)},
+                { (Supplier<MemorySegment>) () -> Arena.ofConfined().allocate(16, 1)},
                 { (Supplier<MemorySegment>) () -> MemorySegment.ofArray(new byte[16]) }
         };
     }
@@ -771,8 +782,8 @@ public class TestByteBuffer {
     @DataProvider(name = "closeableArenas")
     public static Object[][] closeableArenas() {
         return new Object[][] {
-                { (Supplier<Arena>) Arena::openConfined },
-                { (Supplier<Arena>) Arena::openShared },
+                { (Supplier<Arena>) Arena::ofConfined},
+                { (Supplier<Arena>) Arena::ofShared},
         };
     }
 
@@ -985,5 +996,27 @@ public class TestByteBuffer {
         return Stream.of(MappedSegmentOp.values())
                 .map(op -> new Object[] { op })
                 .toArray(Object[][]::new);
+    }
+
+    @DataProvider(name = "bufferFactories")
+    public static Object[][] bufferFactories() {
+        List<Supplier<Buffer>> l = List.of(
+                () -> ByteBuffer.allocate(10),
+                () -> CharBuffer.allocate(10),
+                () -> ShortBuffer.allocate(10),
+                () -> IntBuffer.allocate(10),
+                () -> FloatBuffer.allocate(10),
+                () -> LongBuffer.allocate(10),
+                () -> DoubleBuffer.allocate(10),
+                () -> ByteBuffer.allocateDirect(10),
+                () -> ByteBuffer.allocateDirect(10).asCharBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asShortBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asIntBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asFloatBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asLongBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asDoubleBuffer()
+        );
+        return l.stream().map(s -> new Object[] { s }).toArray(Object[][]::new);
+
     }
 }
