@@ -23,7 +23,7 @@
 
 package handle.lookup;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 
 import java.lang.invoke.MethodHandle;
@@ -54,16 +54,16 @@ public class MethodHandleLookup {
                             MethodType.methodType(MemorySegment.class, long.class, long.class)),
                             "MemorySegment::ofAddress/2" },
                     { MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                            MethodType.methodType(MemorySegment.class, long.class, long.class, SegmentScope.class)),
+                            MethodType.methodType(MemorySegment.class, long.class, long.class, Arena.class)),
                             "MemorySegment::ofAddress/3" },
                     { MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                            MethodType.methodType(MemorySegment.class, long.class, long.class, SegmentScope.class, Runnable.class)),
+                            MethodType.methodType(MemorySegment.class, long.class, long.class, Arena.class, Runnable.class)),
                             "MemorySegment::ofAddress/4" },
                     { MethodHandles.lookup().findStatic(SymbolLookup.class, "libraryLookup",
-                            MethodType.methodType(SymbolLookup.class, String.class, SegmentScope.class)),
+                            MethodType.methodType(SymbolLookup.class, String.class, Arena.class)),
                             "SymbolLookup::libraryLookup(String)" },
                     { MethodHandles.lookup().findStatic(SymbolLookup.class, "libraryLookup",
-                            MethodType.methodType(SymbolLookup.class, Path.class, SegmentScope.class)),
+                            MethodType.methodType(SymbolLookup.class, Path.class, Arena.class)),
                             "SymbolLookup::libraryLookup(Path)" },
             };
         } catch (Throwable ex) {
